# bsound

./: .gitignore  CMakeLists.txt  README.md
src/: bsound.c  bsound.h
src/compat/: csoundcompat.c  csoundcompat.h
src/opcodes/: compress.c  compress.h  reverbsc.c  reverbsc.h
